--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,9 @@
-.btn{
-    box-shadow: 10px 10px darkgrey;
+.btn {
+  box-shadow: 10px 20px darkgrey;
+}
+.banner {
+  background: linear-gradient(-45deg, #ee7752, #e33535, #23a6d5, #23d5ab);
+  background-size: 100% 100%;
+  animation: gradient 15s ease infinite;
+  height: 10vh;
 }
