--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,13 @@
 .btn{
     box-shadow: 10px 10px darkgrey;
 }
+
+ button[type=button], button[type=submit], button[type=reset] {
+    background-color: #04AA6D;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+} 
