--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,30 @@
+:root {
+  --cool-gradient: linear-gradient(
+    var(--cool-deg),
+    #ee7752,
+    #e33535,
+    #23a6d5,
+    #23d5ab
+  );
+  --cool-deg: -45deg;
+}
+
 .btn {
   box-shadow: 3px 3px darkgrey;
 }
 .banner {
-  background: linear-gradient(-45deg, #ee7752, #e33535, #23a6d5, #23d5ab);
+  background: var(--cool-gradient);
   background-size: 100% 100%;
   animation: gradient 15s ease infinite;
   height: 10vh;
   box-shadow: 1px 3px rgb(107, 104, 104);
   text-align: center;
-  color: rgb(52, 51, 51)
+  color: rgb(52, 51, 51);
+}
+.btn-primary {
+  background: var(--cool-gradient);
+  margin-top: 0.5em;
+  color: rgb(52, 51, 51);
+  font-weight: bolder;
 }
 
- 
